css/navbar.css
.home-logo {
    margin-left: 2.5rem;
    margin-top: 1.2rem;
    width: 20rem;
}

.navbar {
    background: #0E1428;
    height: 80px;
    display: flex;
    /* justify-content: center; */
    align-items: 1.2rem;
    position: sticky; 
    top: 0;
    z-index: 999;
}

.navbar_container {
    display: flex;
    /* justify-content: space-between; */
    height: 80px;
    z-index: 1;
    width: 100%;
    max-width: 1300px;
    margin-left: auto;
    margin-right: auto;
}

#navbar_logo {
    background: #d95d39;
    background-image: linear-gradient(to top, #FEE3C3 10%, #0E1428 100%);
    background-size: 100%;
    background-clip: border-box;
    -webkit-background-clip: text;
    -moz-background-clip: transparent;
    -webkit-text-fill-color: transparent;
    -moz-text-fill-color: transparent;
    display: flex;
    align-items: center;
    cursor: pointer;
    text-decoration: none;
    font-size: 2rem;
    font-weight: 600;
    width: 200px;
}
 
.navbar_menu {
    display: flex;
    align-items: center;
    list-style: none;
}

.navbar_item {
    height: 80px;
}

.navbar_links {
    color: #fff;
    display: flex;
    align-items: center;
    justify-content: center;
    width: 125px;
    text-decoration: none;
    height: 100%;
    transition: all 0.3s ease;
}

.navbar_btn {
    display: flex;
    justify-content: center;
    align-items: 0 1rem;
    width: 100%;
}

.button {
    display: flex;
    justify-content: center;
    align-items: center;
    text-decoration: none;
    padding: 10px 20px;
    width: 100%;
    border: none;
    border-radius: 4px;
    background: #FDC830;  /* fallback for old browsers */
    background: -webkit-linear-gradient(to right, #F37335, #FDC830);  /* Chrome 10-25, Safari 5.1-6 */
    background: linear-gradient(to right, #F37335, #FDC830); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */    
    color: #0E1428!important;
    transition: all 0.3s ease;
    font-weight: 600;
    font-family: Sora;
}

.button:hover {
    color: white!important;
}

.navbar_links:hover {
    color: #FEE3C3;
    transition: all 0.3s ease;
}

@media screen and (max-width: 960px) {
    .home-logo {
        margin-left: 0.2rem;
    }

    .navbar_container {
        display: flex;
        justify-content: space-between;
        height: 80px;
        z-index: 1;
        width: 100%;
        max-width: 1300px;
        padding: 0;
    }

    .navbar_menu {
        display: grid;
        grid-template-columns: auto;
        margin: 0;
        width: 100%;
        position: absolute;
        top: -1000px;
        opacity: 1;
        transition: all 0.5s ease;
        z-index: -1;
    }

    .navbar_menu.active {
        width: 100%;
        background: #0E1428;
        top: 100%;
        opacity: 1;
        transition: all 0.5s ease;
        z-index: 120vh;
        font-size: 1.6rem;
        border-top: solid #d95d39 3px;
        box-shadow: 6px 5px 5px 1px rgb(0 0 0 / 20%);
        margin-left: auto;
        margin-right: auto;
        left: 0%;
    }

    #navbar_logo {
        padding-left: 25px;
        font-size: 1.9rem;
        width: 200px;
    }

    .navbar_toggle .bar {
        width: 25px;
        height: 3px;
        margin: 5px auto;
        transition: all 0.3s ease-in-out;
        background: #fff;
    }

    .navbar__item {
        width: 100%;
      }

    .navbar_links {
        text-align: center;
        padding: 2rem;
        width: 100%;
        display: table;
    }

    .navbar_btn {
        padding-bottom: 2rem;
    }

    .button {
        display: flex;
        justify-content: center;
        align-items: center;
        width: 80%;
        height: 80px;
        margin: 0;
    }

    #mobile-menu {
        position: absolute;
        top: 20%;
        right: 5%;
        transform: translate(5%, 20%);
    }

    .navbar_toggle .bar {
        display: block;
        cursor: pointer;
    }

    #mobile-menu.is-active .bar:nth-child(2) {
        opacity: 0;
    }

    #mobile-menu.is-active .bar:nth-child(1) {
        transform: translateY(8px) rotate(45deg);
    }

    #mobile-menu.is-active .bar:nth-child(3) {
        transform: translateY(-8px) rotate(-45deg);
    }
}

